--- a/package/crds/cloudfunctions.gcp.upbound.io_functions.yaml
+++ b/package/crds/cloudfunctions.gcp.upbound.io_functions.yaml
@@ -73,6 +73,12 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  automaticUpdatePolicy:
+                    description: Security patches are applied automatically to the
+                      runtime without requiring the function to be redeployed. This
+                      should be specified as an empty block and cannot be set alongside
+                      on_deploy_update_policy.
+                    type: object
                   availableMemoryMb:
                     description: Memory (in MB), available to the function. Default
                       value is 256. Possible values include 128, 256, 512, 1024, etc.
@@ -181,6 +187,12 @@ spec:
                     description: The limit on the minimum number of function instances
                       that may coexist at a given time.
                     type: number
+                  onDeployUpdatePolicy:
+                    description: Security patches are only applied when a function
+                      is redeployed. This should be specified as an empty block and
+                      cannot be set alongside automatic_update_policy. Structure is
+                      documented below.
+                    type: object
                   project:
                     description: Project of the function. If it is not provided, the
                       provider project is used.
@@ -483,6 +495,12 @@ spec:
                   for example because of an external controller is managing them, like an
                   autoscaler.
                 properties:
+                  automaticUpdatePolicy:
+                    description: Security patches are applied automatically to the
+                      runtime without requiring the function to be redeployed. This
+                      should be specified as an empty block and cannot be set alongside
+                      on_deploy_update_policy.
+                    type: object
                   availableMemoryMb:
                     description: Memory (in MB), available to the function. Default
                       value is 256. Possible values include 128, 256, 512, 1024, etc.
@@ -591,6 +609,12 @@ spec:
                     description: The limit on the minimum number of function instances
                       that may coexist at a given time.
                     type: number
+                  onDeployUpdatePolicy:
+                    description: Security patches are only applied when a function
+                      is redeployed. This should be specified as an empty block and
+                      cannot be set alongside automatic_update_policy. Structure is
+                      documented below.
+                    type: object
                   project:
                     description: Project of the function. If it is not provided, the
                       provider project is used.
@@ -970,6 +994,12 @@ spec:
             properties:
               atProvider:
                 properties:
+                  automaticUpdatePolicy:
+                    description: Security patches are applied automatically to the
+                      runtime without requiring the function to be redeployed. This
+                      should be specified as an empty block and cannot be set alongside
+                      on_deploy_update_policy.
+                    type: object
                   availableMemoryMb:
                     description: Memory (in MB), available to the function. Default
                       value is 256. Possible values include 128, 256, 512, 1024, etc.
@@ -1086,6 +1116,17 @@ spec:
                     description: The limit on the minimum number of function instances
                       that may coexist at a given time.
                     type: number
+                  onDeployUpdatePolicy:
+                    description: Security patches are only applied when a function
+                      is redeployed. This should be specified as an empty block and
+                      cannot be set alongside automatic_update_policy. Structure is
+                      documented below.
+                    properties:
+                      runtimeVersion:
+                        description: (Output) The runtime version which was used during
+                          latest function deployment.
+                        type: string
+                    type: object
                   project:
                     description: Project of the function. If it is not provided, the
                       provider project is used.
