--- a/package/crds/cloudrun.gcp.upbound.io_v2jobs.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_v2jobs.yaml
@@ -548,10 +548,25 @@ spec:
                                   The execution environment being used to host this Task.
                                   Possible values are: EXECUTION_ENVIRONMENT_GEN1, EXECUTION_ENVIRONMENT_GEN2.
                                 type: string
+                              gpuZonalRedundancyDisabled:
+                                description: True if GPU zonal redundancy is disabled
+                                  on this execution.
+                                type: boolean
                               maxRetries:
                                 description: Number of retries allowed per Task, before
                                   marking this Task failed.
                                 type: number
+                              nodeSelector:
+                                description: |-
+                                  Node Selector describes the hardware requirements of the resources.
+                                  Structure is documented below.
+                                properties:
+                                  accelerator:
+                                    description: The GPU to attach to an instance.
+                                      See https://cloud.google.com/run/docs/configuring/jobs/gpu
+                                      for configuring GPU.
+                                    type: string
+                                type: object
                               serviceAccount:
                                 description: Email address of the IAM service account
                                   associated with the Task of a Job. The service account
@@ -1399,10 +1414,25 @@ spec:
                                   The execution environment being used to host this Task.
                                   Possible values are: EXECUTION_ENVIRONMENT_GEN1, EXECUTION_ENVIRONMENT_GEN2.
                                 type: string
+                              gpuZonalRedundancyDisabled:
+                                description: True if GPU zonal redundancy is disabled
+                                  on this execution.
+                                type: boolean
                               maxRetries:
                                 description: Number of retries allowed per Task, before
                                   marking this Task failed.
                                 type: number
+                              nodeSelector:
+                                description: |-
+                                  Node Selector describes the hardware requirements of the resources.
+                                  Structure is documented below.
+                                properties:
+                                  accelerator:
+                                    description: The GPU to attach to an instance.
+                                      See https://cloud.google.com/run/docs/configuring/jobs/gpu
+                                      for configuring GPU.
+                                    type: string
+                                type: object
                               serviceAccount:
                                 description: Email address of the IAM service account
                                   associated with the Task of a Job. The service account
@@ -2379,10 +2409,25 @@ spec:
                                   The execution environment being used to host this Task.
                                   Possible values are: EXECUTION_ENVIRONMENT_GEN1, EXECUTION_ENVIRONMENT_GEN2.
                                 type: string
+                              gpuZonalRedundancyDisabled:
+                                description: True if GPU zonal redundancy is disabled
+                                  on this execution.
+                                type: boolean
                               maxRetries:
                                 description: Number of retries allowed per Task, before
                                   marking this Task failed.
                                 type: number
+                              nodeSelector:
+                                description: |-
+                                  Node Selector describes the hardware requirements of the resources.
+                                  Structure is documented below.
+                                properties:
+                                  accelerator:
+                                    description: The GPU to attach to an instance.
+                                      See https://cloud.google.com/run/docs/configuring/jobs/gpu
+                                      for configuring GPU.
+                                    type: string
+                                type: object
                               serviceAccount:
                                 description: Email address of the IAM service account
                                   associated with the Task of a Job. The service account
