--- a/package/crds/compute.gcp.upbound.io_regiondisks.yaml
+++ b/package/crds/compute.gcp.upbound.io_regiondisks.yaml
@@ -281,6 +281,17 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  provisionedIops:
+                    description: |-
+                      Indicates how many IOPS to provision for the disk. This sets the number of I/O operations per second
+                      that the disk can handle. Values must be between 10,000 and 120,000.
+                      For more details, see the Extreme persistent disk documentation.
+                    type: number
+                  provisionedThroughput:
+                    description: |-
+                      Indicates how much throughput to provision for the disk. This sets the number of throughput
+                      mb per second that the disk can handle. Values must be greater than or equal to 1.
+                    type: number
                   region:
                     description: A reference to the region where the disk resides.
                     type: string
@@ -628,6 +639,17 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  provisionedIops:
+                    description: |-
+                      Indicates how many IOPS to provision for the disk. This sets the number of I/O operations per second
+                      that the disk can handle. Values must be between 10,000 and 120,000.
+                      For more details, see the Extreme persistent disk documentation.
+                    type: number
+                  provisionedThroughput:
+                    description: |-
+                      Indicates how much throughput to provision for the disk. This sets the number of throughput
+                      mb per second that the disk can handle. Values must be greater than or equal to 1.
+                    type: number
                   replicaZones:
                     description: URLs of the zones where the disk should be replicated
                       to.
@@ -969,6 +991,17 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  provisionedIops:
+                    description: |-
+                      Indicates how many IOPS to provision for the disk. This sets the number of I/O operations per second
+                      that the disk can handle. Values must be between 10,000 and 120,000.
+                      For more details, see the Extreme persistent disk documentation.
+                    type: number
+                  provisionedThroughput:
+                    description: |-
+                      Indicates how much throughput to provision for the disk. This sets the number of throughput
+                      mb per second that the disk can handle. Values must be greater than or equal to 1.
+                    type: number
                   region:
                     description: A reference to the region where the disk resides.
                     type: string
