--- a/package/crds/container.gcp.upbound.io_clusters.yaml
+++ b/package/crds/container.gcp.upbound.io_clusters.yaml
@@ -196,6 +196,23 @@ spec:
                                 type: boolean
                             type: object
                           type: array
+                        lustreCsiDriverConfig:
+                          description: |-
+                            The status of the Lustre CSI driver addon,
+                            which allows the usage of a Lustre instances as volumes.
+                            It is disabled by default for Standard clusters; set enabled = true to enable.
+                            It is disabled by default for Autopilot clusters; set enabled = true to enable.
+                            Lustre CSI Driver Config has optional subfield
+                            enable_legacy_lustre_port which allows the Lustre CSI driver to initialize LNet (the virtual networklayer for Lustre kernel module) using port 6988.
+                            This flag is required to workaround a port conflict with the gke-metadata-server on GKE nodes.
+                            See Enable Lustre CSI driver for more information.
+                          properties:
+                            enableLegacyLustrePort:
+                              type: boolean
+                            enabled:
+                              description: Enables vertical pod autoscaling
+                              type: boolean
+                          type: object
                         networkPolicyConfig:
                           description: |-
                             Whether we should enable the network policy addon
@@ -827,6 +844,25 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        additionalIpRangesConfig:
+                          description: |-
+                            The configuration for individual additional subnetworks attached to the cluster.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              podIpv4RangeNames:
+                                description: List of secondary ranges names within
+                                  this subnetwork that can be used for pod IPs.
+                                items:
+                                  type: string
+                                type: array
+                              subnetwork:
+                                description: |-
+                                  The name or self_link of the Google Compute Engine
+                                  subnetwork in which the cluster's instances are launched.
+                                type: string
+                            type: object
+                          type: array
                         additionalPodRangesConfig:
                           description: |-
                             The configuration for additional pod secondary ranges at
@@ -2257,6 +2293,20 @@ spec:
                       The ID of the project in which the resource belongs. If it
                       is not provided, the provider project is used.
                     type: string
+                  rbacBindingConfig:
+                    description: RBACBindingConfig allows user to restrict ClusterRoleBindings
+                      an RoleBindings that can be created. Structure is documented
+                      below.
+                    properties:
+                      enableInsecureBindingSystemAuthenticated:
+                        description: Setting this to true will allow any ClusterRoleBinding
+                          and RoleBinding with subjects system:authenticated.
+                        type: boolean
+                      enableInsecureBindingSystemUnauthenticated:
+                        description: Setting this to true will allow any ClusterRoleBinding
+                          and RoleBinding with subjects system:anonymous or system:unauthenticated.
+                        type: boolean
+                    type: object
                   releaseChannel:
                     description: |-
                       Configuration options for the Release channel
@@ -2650,6 +2700,23 @@ spec:
                                 type: boolean
                             type: object
                           type: array
+                        lustreCsiDriverConfig:
+                          description: |-
+                            The status of the Lustre CSI driver addon,
+                            which allows the usage of a Lustre instances as volumes.
+                            It is disabled by default for Standard clusters; set enabled = true to enable.
+                            It is disabled by default for Autopilot clusters; set enabled = true to enable.
+                            Lustre CSI Driver Config has optional subfield
+                            enable_legacy_lustre_port which allows the Lustre CSI driver to initialize LNet (the virtual networklayer for Lustre kernel module) using port 6988.
+                            This flag is required to workaround a port conflict with the gke-metadata-server on GKE nodes.
+                            See Enable Lustre CSI driver for more information.
+                          properties:
+                            enableLegacyLustrePort:
+                              type: boolean
+                            enabled:
+                              description: Enables vertical pod autoscaling
+                              type: boolean
+                          type: object
                         networkPolicyConfig:
                           description: |-
                             Whether we should enable the network policy addon
@@ -3281,6 +3348,25 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        additionalIpRangesConfig:
+                          description: |-
+                            The configuration for individual additional subnetworks attached to the cluster.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              podIpv4RangeNames:
+                                description: List of secondary ranges names within
+                                  this subnetwork that can be used for pod IPs.
+                                items:
+                                  type: string
+                                type: array
+                              subnetwork:
+                                description: |-
+                                  The name or self_link of the Google Compute Engine
+                                  subnetwork in which the cluster's instances are launched.
+                                type: string
+                            type: object
+                          type: array
                         additionalPodRangesConfig:
                           description: |-
                             The configuration for additional pod secondary ranges at
@@ -4702,6 +4788,20 @@ spec:
                       The ID of the project in which the resource belongs. If it
                       is not provided, the provider project is used.
                     type: string
+                  rbacBindingConfig:
+                    description: RBACBindingConfig allows user to restrict ClusterRoleBindings
+                      an RoleBindings that can be created. Structure is documented
+                      below.
+                    properties:
+                      enableInsecureBindingSystemAuthenticated:
+                        description: Setting this to true will allow any ClusterRoleBinding
+                          and RoleBinding with subjects system:authenticated.
+                        type: boolean
+                      enableInsecureBindingSystemUnauthenticated:
+                        description: Setting this to true will allow any ClusterRoleBinding
+                          and RoleBinding with subjects system:anonymous or system:unauthenticated.
+                        type: boolean
+                    type: object
                   releaseChannel:
                     description: |-
                       Configuration options for the Release channel
@@ -5171,6 +5271,23 @@ spec:
                                 type: boolean
                             type: object
                           type: array
+                        lustreCsiDriverConfig:
+                          description: |-
+                            The status of the Lustre CSI driver addon,
+                            which allows the usage of a Lustre instances as volumes.
+                            It is disabled by default for Standard clusters; set enabled = true to enable.
+                            It is disabled by default for Autopilot clusters; set enabled = true to enable.
+                            Lustre CSI Driver Config has optional subfield
+                            enable_legacy_lustre_port which allows the Lustre CSI driver to initialize LNet (the virtual networklayer for Lustre kernel module) using port 6988.
+                            This flag is required to workaround a port conflict with the gke-metadata-server on GKE nodes.
+                            See Enable Lustre CSI driver for more information.
+                          properties:
+                            enableLegacyLustrePort:
+                              type: boolean
+                            enabled:
+                              description: Enables vertical pod autoscaling
+                              type: boolean
+                          type: object
                         networkPolicyConfig:
                           description: |-
                             Whether we should enable the network policy addon
@@ -5845,6 +5962,25 @@ spec:
                       Structure is documented below.
                     items:
                       properties:
+                        additionalIpRangesConfig:
+                          description: |-
+                            The configuration for individual additional subnetworks attached to the cluster.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              podIpv4RangeNames:
+                                description: List of secondary ranges names within
+                                  this subnetwork that can be used for pod IPs.
+                                items:
+                                  type: string
+                                type: array
+                              subnetwork:
+                                description: |-
+                                  The name or self_link of the Google Compute Engine
+                                  subnetwork in which the cluster's instances are launched.
+                                type: string
+                            type: object
+                          type: array
                         additionalPodRangesConfig:
                           description: |-
                             The configuration for additional pod secondary ranges at
@@ -6970,6 +7106,11 @@ spec:
                                 type: string
                               podRange:
                                 type: string
+                              subnetwork:
+                                description: |-
+                                  The name or self_link of the Google Compute Engine
+                                  subnetwork in which the cluster's instances are launched.
+                                type: string
                             type: object
                           type: array
                         nodeConfig:
@@ -7986,6 +8127,20 @@ spec:
                       The ID of the project in which the resource belongs. If it
                       is not provided, the provider project is used.
                     type: string
+                  rbacBindingConfig:
+                    description: RBACBindingConfig allows user to restrict ClusterRoleBindings
+                      an RoleBindings that can be created. Structure is documented
+                      below.
+                    properties:
+                      enableInsecureBindingSystemAuthenticated:
+                        description: Setting this to true will allow any ClusterRoleBinding
+                          and RoleBinding with subjects system:authenticated.
+                        type: boolean
+                      enableInsecureBindingSystemUnauthenticated:
+                        description: Setting this to true will allow any ClusterRoleBinding
+                          and RoleBinding with subjects system:anonymous or system:unauthenticated.
+                        type: boolean
+                    type: object
                   releaseChannel:
                     description: |-
                       Configuration options for the Release channel
