--- a/examples-generated/cluster/gemini/v1beta1/geminigcpenablementsetting.yaml
+++ b/examples-generated/cluster/gemini/v1beta1/geminigcpenablementsetting.yaml
@@ -8,8 +8,8 @@ metadata:
   name: example
 spec:
   forProvider:
-    disableWebGrounding: true
     enableCustomerDataSharing: true
     labels:
       my_key: my_value
     location: global
+    webGroundingType: WEB_GROUNDING_FOR_ENTERPRISE
