--- a/examples-generated/namespaced/gemini/v1beta1/geminigcpenablementsetting.yaml
+++ b/examples-generated/namespaced/gemini/v1beta1/geminigcpenablementsetting.yaml
@@ -9,8 +9,8 @@ metadata:
   namespace: upbound-system
 spec:
   forProvider:
-    disableWebGrounding: true
     enableCustomerDataSharing: true
     labels:
       my_key: my_value
     location: global
+    webGroundingType: WEB_GROUNDING_FOR_ENTERPRISE
