--- a/package/crds/gemini.gcp.m.upbound.io_geminigcpenablementsettings.yaml
+++ b/package/crds/gemini.gcp.m.upbound.io_geminigcpenablementsettings.yaml
@@ -84,6 +84,13 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  webGroundingType:
+                    description: |-
+                      Web grounding type.
+                      Possible values:
+                      GROUNDING_WITH_GOOGLE_SEARCH
+                      WEB_GROUNDING_FOR_ENTERPRISE
+                    type: string
                 required:
                 - location
                 type: object
@@ -119,6 +126,13 @@ spec:
                     description: |-
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
+                    type: string
+                  webGroundingType:
+                    description: |-
+                      Web grounding type.
+                      Possible values:
+                      GROUNDING_WITH_GOOGLE_SEARCH
+                      WEB_GROUNDING_FOR_ENTERPRISE
                     type: string
                 type: object
               managementPolicies:
@@ -235,6 +249,13 @@ spec:
                     x-kubernetes-map-type: granular
                   updateTime:
                     description: Update time stamp.
+                    type: string
+                  webGroundingType:
+                    description: |-
+                      Web grounding type.
+                      Possible values:
+                      GROUNDING_WITH_GOOGLE_SEARCH
+                      WEB_GROUNDING_FOR_ENTERPRISE
                     type: string
                 type: object
               conditions:
