fix(kms): update resourceType to resourceTypeSelector in KeyHandle example
Signed-off-by: Laurent Gauthier <lgauthier541@outlook.com>

--- a/examples/kms/cluster/v1beta1/keyhandle.yaml
+++ b/examples/kms/cluster/v1beta1/keyhandle.yaml
@@ -16,7 +16,7 @@ spec:
     projectSelector:
       matchLabels:
         testing.upbound.io/example-name: resource-project
-    resourceType: storage.googleapis.com/Bucket
+    resourceTypeSelector: storage.googleapis.com/Bucket
 
 ---
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
